
* Release 1.7.1 (2010-07-17)

** Bugfixes and Improvements

 - Fix rarely-encountered incompatibility between Twisted logging utility and
   the new unicode support added in v1.7.0 (#1099)
 - Fix minor layout issue in the Web User Interface with Internet Explorer
   (#1097)
 - Fix bug where server version number was always 0 on the welcome page (#1067)

* Release 1.7.0 (2010-06-18)

** New Features

*** SFTP support

Your Tahoe-LAFS gateway now acts like a full-fledged SFTP server.  It has been
tested with sshfs to provide a virtual filesystem in Linux.  Many users have
asked for this feature.  We hope that it serves them well! See the
docs/frontends/FTP-and-SFTP.txt document to get started.

*** support for non-ASCII character encodings

Tahoe-LAFS now correctly handles filenames containing non-ASCII characters on
all supported platforms:

 - when reading files in from the local filesystem (such as when you run "tahoe
   backup" to back up your local files to a Tahoe-LAFS grid);

 - when writing files out to the local filesystem (such as when you run "tahoe
   cp -r" to recursively copy files out of a Tahoe-LAFS grid);

 - when displaying filenames to the terminal (such as when you run "tahoe ls"),
   subject to limitations of the terminal and locale;

 - when parsing command-line arguments, except on Windows.

*** Servers of Happiness

Tahoe-LAFS now measures during immutable file upload to see how well
distributed it is across multiple servers. It aborts the upload if the pieces
of the file are not sufficiently well-distributed.

This behavior is controlled by a configuration parameter called "servers of
happiness". With the default settings for its erasure coding, Tahoe-LAFS
generates 10 shares for each file, such that any 3 of those shares are
sufficient to recover the file. The default value of "servers of happiness" is
7, which means that Tahoe-LAFS will guarantee that there are at least 7 servers