@@ -99,7 +99,7 @@ D: edited docs/running.html
 N: David-Sarah Hopwood
 E: david-sarah@jacaranda.org
 P: 12F8 A95C C90B B68E 369C 003D 5947 3C63 3CB3 A807
-D: Tahoe-LAFS Hacker; ticket gardening, code, code review, docs, SFTP frontend
+D: Tahoe-LAFS Hacker; ticket gardening, code, code review, docs, SFTP, cli
 
 N: Jacob Appelbaum
 E: jacob@appelbaum.com
