@@ -429,6 +429,7 @@ subCommands = [
     ["put", None, PutOptions, "Upload a file into the grid."],
     ["cp", None, CpOptions, "Copy one or more files."],
     ["rm", None, RmOptions, "Unlink a file or directory on the grid."],
+    ["unlink", None, RmOptions, "Unlink a file or directory on the grid (same as rm)."],
     ["mv", None, MvOptions, "Move a file within the grid."],
     ["ln", None, LnOptions, "Make an additional link to an existing file."],
     ["backup", None, BackupOptions, "Make target dir look like local dir."],
@@ -543,6 +544,7 @@ dispatch = {
     "put": put,
     "cp": cp,
     "rm": rm,
+    "unlink": rm,
     "mv": mv,
     "ln": ln,
     "backup": backup,
