@@ -2435,6 +2435,9 @@ class Rm(GridTestMixin, CLITestMixin, unittest.TestCase):
     def test_rm_without_alias(self):
         # 'tahoe rm' should behave sensibly when invoked without an explicit
         # alias before the default 'tahoe' alias has been created.
+
+        d.addCallback(lambda ign: self.do_cli("unlink", "afile"))
+        d.addCallback(_check)
         self.basedir = "cli/Rm/rm_without_alias"
         self.set_up_grid()
         d = self.do_cli("rm", "afile")
@@ -2449,6 +2452,9 @@ class Rm(GridTestMixin, CLITestMixin, unittest.TestCase):
         # 'tahoe rm' should behave sensibly when invoked with an explicit
         # alias that doesn't exist.
         self.basedir = "cli/Rm/rm_with_nonexistent_alias"
+
+        d.addCallback(lambda ign: self.do_cli("unlink", "nonexistent:afile"))
+        d.addCallback(_check)
         self.set_up_grid()
         d = self.do_cli("rm", "nonexistent:afile")
         def _check((rc, out, err)):
