@@ -9,6 +9,8 @@
  - Fix minor layout issue in the Web User Interface with Internet Explorer
    (#1097)
  - Fix bug where server version number was always 0 on the welcome page (#1067)
+ - Add new command-line command "tahoe unlink" as a synonym for "tahoe rm"
+   (#1072)
 
 * Release 1.7.0 (2010-06-18)
 
